Final Changes Frontend Sprint 1

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -29,8 +29,11 @@
         <div class="jumbotron sc_sq">
             <div>
                 <p>Recipients:</p>
-                <input type="file" id="file-selector" accept=".csv" autocomplete="off">
-
+                <div>
+                    <input type="file" id="file-selector" name="fileupload" style="display: none" onChange="Handlechange();" accept=".csv" autocomplete="off" />
+                    <input type="text" id="filename" readonly="true" autocomplete="off" />
+                    <input type="button" value="Click to select file" id="fakeBrowse" onclick="HandleBrowseClick();" />
+                </div>
                 <br>
                 <div id="phones_length" style="font-style: oblique;  color: #b5bcc7;"></div>
                 <br>
