Final Changes 2 Frontend Sprint 1

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -40,7 +40,7 @@
             </div>
             <div>
                 <p>Message:</p>
-                <textarea name="" id="message_box"></textarea>
+                <textarea name="" id="message_box" style="resize: none;"></textarea>
                 <br>
             </div>
             <br>
